# tafelbild_to_pdf

./: .gitignore  README.md  pyproject.toml
tafelbild2pdf/: __main__.py
tafelbild2pdf/gui/: config.py  routes.py
tafelbild2pdf/gui/helpers/: calc.py  image_handler.py
tafelbild2pdf/gui/static/: map.html
tafelbild2pdf/gui/static/css/: style.css
tafelbild2pdf/gui/templates/: ctrl_panel.html  index.html
